# rs-actor-mutex-benchmark

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: mutex_actor_benchmark.rs
src/: actors.rs  lib.rs  mutex.rs  parking_lot_mutex.rs  std_mutex.rs
