[package]
name = "rs-actor-mutex-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "mutex_actor_benchmark"
harness = false

# [[bench]]
# name = "actor_benchmark"
# harness = false
